use fkooman/io and update code accordingly

--- a/composer.json
+++ b/composer.json
@@ -9,15 +9,14 @@
     "name": "fkooman/indiecert",
     "require": {
         "ext-apc": "*",
-        "ext-date": "*",
         "ext-dom": "*",
         "ext-filter": "*",
         "ext-libxml": "*",
-        "ext-openssl": "*",
         "ext-pcre": "*",
         "ext-pdo": "*",
         "ext-spl": "*",
         "fkooman/ini": "^1.0.0",
+        "fkooman/io": "^1.0.0",
         "fkooman/rest": "^1.0.1",
         "fkooman/rest-plugin-authentication-bearer": "^1.0.0",
         "fkooman/rest-plugin-authentication-indieauth": "^1.0.0",
