--- a/docker/indiecert.example-httpd.conf
+++ b/docker/indiecert.example-httpd.conf
@@ -4,6 +4,7 @@
 
     ErrorLog logs/indiecert.example_error_log
     TransferLog logs/indiecert.example_access_log
+    CustomLog logs/indiecert.example_combined_log combined
     LogLevel warn
 
     RewriteEngine On
@@ -21,6 +22,7 @@ SSLVerifyDepth 5
 
     ErrorLog logs/indiecert.example_ssl_error_log
     TransferLog logs/indiecert.example_ssl_access_log
+    CustomLog logs/indiecert.example_combined_log combined
     LogLevel warn
 
     DocumentRoot /usr/share/indiecert/web
