separate ssl log

--- a/docker/indiecert.example-httpd.conf
+++ b/docker/indiecert.example-httpd.conf
@@ -22,7 +22,7 @@ SSLVerifyDepth 5
 
     ErrorLog logs/indiecert.example_ssl_error_log
     TransferLog logs/indiecert.example_ssl_access_log
-    CustomLog logs/indiecert.example_combined_log combined
+    CustomLog logs/indiecert.example_ssl_combined_log combined
     LogLevel warn
 
     DocumentRoot /usr/share/indiecert/web
