--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
         "fkooman/ini": "^1.0.0",
         "fkooman/io": "^1.0.0",
         "fkooman/rest": "^1.0.1",
-        "fkooman/rest-plugin-authentication-indieauth": "^1.0.0",
-        "fkooman/rest-plugin-authentication-tls": "^1.0.0",
+        "fkooman/rest-plugin-authentication-indieauth": "dev-master",
+        "fkooman/rest-plugin-authentication-tls": "^2.0.0",
         "fkooman/tpl-twig": "^1.0.0",
         "guzzlehttp/guzzle": "~5.3"
     }
