- allow to specify the enroll URL in the configuration file

--- a/config/config.yaml.example
+++ b/config/config.yaml.example
@@ -5,5 +5,9 @@ serverMode: production
 # Uncomment this line below to enable Twig template caching
 #templateCache = "/var/lib/indiecert-auth/tpl"
 
+# The URL to redirect the user to if they do not have a client certificate 
+# installed in their browser yet
+enrollUrl: https://enroll.indiecert.example/
+
 Db:
     dsn: 'sqlite:/var/lib/indiecert-auth/storage.sqlite'
