--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,13 @@
         "fkooman/config": "^1.0.0",
         "fkooman/http": "^1.0.0",
         "fkooman/io": "^1.0.0",
-        "fkooman/rest": "^1.0.1",
+        "fkooman/rest": "^1.1.0",
         "fkooman/rest-plugin-authentication": "^2.0.0",
         "fkooman/rest-plugin-authentication-tls": "^2.0.0",
         "fkooman/tpl": "^2.0.0",
         "fkooman/tpl-twig": "^1.0.0",
-        "guzzlehttp/guzzle": "~5.3"
+        "guzzlehttp/guzzle": "~5.3",
+        "phpseclib/phpseclib": "^2.0.0"
     },
     "require-dev": {
         "fkooman/json": "^1.0.0"
